@@ -1,0 +1,3 @@
+<a href="[[++site_url]]manager/?a=resource/update&id=[[*id]]" id="adminToolBar" class="btn btn-default btn-xs btn-inverse" style="position:fixed; left:-54px; top:100px; z-index:1001;-ms-transform: rotate(-90deg); -webkit-transform: rotate(-90deg);transform: rotate(-90deg);"><i class="icon-folder-open icon-white"></i> Редактировать (id:[[*id]])</a>
+
+<a href="[[++site_url]]manager/?a=element/template/update&id=[[*template]]" class="btn btn-default btn-xs btn-inverse" style="position:fixed; left:-18px; top:230px; z-index:1001;-ms-transform: rotate(-90deg); -webkit-transform: rotate(-90deg);transform: rotate(-90deg); display:inline-block;"><i class="icon-folder-open icon-white"></i> Шаблон</a>
