@@ -1,3 +1,8 @@
+/* MetaTager ver.1.3.2
+---------------------------------------------------------*/
+- Добавил adminToolBar
+- Исправление совместимости с SEOPro
+
 /* MetaTager ver.1.3.0
 ---------------------------------------------------------*/
 - Рефакторинг сниппета MetaTager
